--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -29,10 +29,11 @@
 }
 
 .Hamburger{
-    width: 8%;
-    padding: 0.1%;
-    height: 32px;
+    width: 0;
+    padding: 0;
     margin-bottom: -15px;
+    display: none;
+    margin-right: -20px;
   }
 
   .sidebar {
@@ -48,7 +49,7 @@
     height: 100%;
     z-index: 99;
   }
-  
+
   .background{
     position: fixed;
     background: rgba(0, 0, 0, 0.7);
@@ -57,5 +58,15 @@
     height: 100vh;
     width: 100vw;
     z-index: 90;
-  
+
+  }
+
+  @media screen and (max-width:760px) {
+    .Hamburger{
+        width: 50%;
+        padding: 0.1%;
+        height: 50px;
+        margin-bottom: -15px;
+        display: inline;
+      }
   }
