--- a/src/styles/Restaurant.module.css
+++ b/src/styles/Restaurant.module.css
@@ -154,3 +154,19 @@
     margin-top: 4%;
 }
 
+
+
+
+table {
+  border-collapse: collapse;
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 3%;
+  text-align: center;
+}
+
+th,
+td {
+  padding: 0.5rem;
+  border: 1px solid black;
+}
