--- a/src/styles/GeneralForum.module.css
+++ b/src/styles/GeneralForum.module.css
@@ -1,9 +1,16 @@
-.categories{
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 10px
+.ListForm{
+    width: 100%;
+    margin-top: 3%;
+    margin-bottom: 1%;
 }
 
+.List{
+    float: left;
+    margin-right: 1%;
+    list-style-type: none;
+    font-size: 1.3em;
+    font-weight: bold;
+}
 .search{
     margin-top: 10px;
     margin-left: 30vw;
@@ -25,7 +32,7 @@
 }
 
 .register_button{
-    
+
     border: none;
     background-color:rosybrown;
     color:black;
@@ -37,4 +44,12 @@
     margin-left: 10vw;
     width: 80vw;
     border: solid black 1px;
+
+}
+
+.show_contentList{
+    margin-left: 10vw;
+    width: 80vw;
+    border: solid black 1px;
+    margin-top: 0.5%;
 }
