--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -34,7 +34,7 @@
 .LoginForm{
     width: 40%;
     margin: auto;
-    margin-top: 15%;
+    margin-top: 11%;
     border-radius: 4px;
     box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.07);
 }
@@ -69,4 +69,10 @@
 
   .Icon{
     margin-right: 5px;
+  }
+
+  .Logo{
+    width: 100%;
+    text-align: center;
+    margin-bottom: 6%;
   }
