--- a/front/src/styles/App.module.css
+++ b/front/src/styles/App.module.css
@@ -13,6 +13,24 @@
 
 .Btn{
   margin-bottom: 6%;
+  width: 30%;
+  height: 50px;
+  background-color: #06A77D;
+  border: #06A77D;
+  color: black;
+  font-weight: bold;
+  font-size: large;
+}
+
+.Btn:hover{
+  margin-bottom: 6%;
+  width: 30%;
+  height: 50px;
+  background-color: #06A77D;
+  border: #06A77D;
+  color: black;
+  font-weight: bold;
+  font-size: large;
 }
 
 .Img{
