--- a/front/src/styles/SignUp.module.css
+++ b/front/src/styles/SignUp.module.css
@@ -3,16 +3,26 @@
     height: 100%;
     padding: 3%;
 }
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
 
 .SignWrap{
-    width: 40%;
+    width: 50%;
     margin: auto;
-    margin-top: 5%;
+    margin-top: 4%;
+    border-radius: 15px;
+    box-shadow: 8px 8px 8px rgba(5, 47, 95, 0.3);
+    background-color: rgba(5, 47, 95, 1);
+    padding: 2%;
+    color: #F1A208;
 }
 
 .Logo{
     text-align: center;
-    margin-bottom: 5%;
+    margin-bottom: 8%;
     font-size: 2em;
 }
 
@@ -21,40 +31,83 @@
     margin: 0 auto;
     margin-bottom: 3%;
     margin-left: 6%;
+
 }
 
 .KwId{
     color: black;
     display: block;
+    color: #D5C67A;
+    font-size: 1em;
+}
+
+.KwPasswordWrap{
+    width: 100%;
+    margin: 0 auto;
+    margin-bottom: 3%;
+    margin-left: 6%;
 }
 
 .Input{
-    width: 65%;
+    width: 68%;
     margin: auto;
     float: left;
     margin-right: 3%;
     padding: 1.5%;
+    border: 3px solid #D5C67A;
 }
 .InputID{
-    width: 68% !important;
+    width: 71% !important;
     margin: auto;
     float: left;
-}
 
+}
+.InputPassword{
+    width: 68% !important;
+    border: 3px solid #D5C67A;
+}
 .InputEmail{
     width: 50%;
     margin: auto;
     float: left;
     padding: 1.5%;
     height: 44px;
+    border: 3px solid #D5C67A;
 }
 .Default{
+    width: 30%;
     margin-right: 4%;
-    padding: 1.5%;
+    padding: 1.2%;
+    border-bottom: 3px solid #D5C67A;
+    border-top: 3px solid #D5C67A;;
+    border-right: 3px solid #D5C67A;
+}
+.DefaultText{
+    width: 100%;
+    text-align:center;
+    font-size: large;
+    font-weight: bold;
 }
 
-.Btn{
+.Btn, .Btn:hover{
     display: inline-block;
     width: 20%;
     padding: 1.5%;
+    background-color: #06A77D;
+    border: #06A77D;
+    color: black;
+    font-weight: bold;
 }
+
+.ResBtn, .ResBtn:hover{
+    display: inline-block;
+    width: 40%;
+    padding: 1.5%;
+    margin-top: 5%;
+    background-color: #06A77D;
+    border: #06A77D;
+    color: black;
+    font-weight: bold;
+}
+
+
