--- a/front/src/styles/SignUp.module.css
+++ b/front/src/styles/SignUp.module.css
@@ -110,4 +110,9 @@ input[type="number"]::-webkit-inner-spin-button {
     font-weight: bold;
 }
 
-
+.EmailCheck{
+    width: 100%;
+    display: inline-block;
+    margin-top: 1%;
+    font-weight: bold;
+}
