--- a/front/src/styles/GeneralForum.module.css
+++ b/front/src/styles/GeneralForum.module.css
@@ -2,17 +2,21 @@
     width: 100%;
     margin-top: 3%;
     margin-bottom: 1%;
+    padding-left: 7%;
+
 }
 
 .List{
     float: left;
-    margin-right: 1%;
     list-style-type: none;
     font-size: 1.3em;
     font-weight: bold;
+    cursor: pointer;
+    padding: 3%;
+    border-radius: 13px;
 }
 .search{
-    margin-top: 10px;
+    margin-top: 3%;
     margin-left: 30vw;
     margin-bottom: 10px;
     width: 40vw;
@@ -21,23 +25,35 @@
 .register_content_table{
     margin-left:10vw;
     margin-bottom: 10px;
-    width:80vw;
     overflow: scroll;
-    border: solid black 1px;
-}
+
+    border-collapse: collapse;
+    background-color: rgba(213, 198, 122, 0.2);
+    border-radius: 15px;
+    border-style: hidden;
+    box-shadow: 0 0 0 4px#052F5F;
+  }
+
 
 .register_content{
     width: 65vw;
     height: 100px;
+    border-radius: 15px;
+    border: 2px solid #052F5F;
+
 }
 
 .register_button{
 
     border: none;
-    background-color:rosybrown;
+    background-color:#06A77D;
     color:black;
     width: 90px;
     height: 80px;
+    font-weight: bold;
+    font-size: large;
+    border-radius: 15px;
+
 }
 
 .show_content{
@@ -54,6 +70,7 @@
     margin-top: 0.5%;
 }
 
-.paging{
-    margin-left: 10vw;
+
+thead{
+    background-color: rgba(213, 198, 122, 0.7);
 }
