--- a/front/src/styles/App.module.css
+++ b/front/src/styles/App.module.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Poor+Story&display=swap');
+*{
+  font-family: 'Gowun Dodum', sans-serif;
+}
+
 .App {
   text-align: center;
 }
@@ -19,7 +24,7 @@
   border: #06A77D;
   color: black;
   font-weight: bold;
-  font-size: large;
+  font-size: 1.1em;
 }
 
 .Btn:hover{
@@ -30,7 +35,7 @@
   border: #06A77D;
   color: black;
   font-weight: bold;
-  font-size: large;
+  font-size: 1.2em;
 }
 
 .Img{
