--- a/front/src/styles/RestaurantList.module.css
+++ b/front/src/styles/RestaurantList.module.css
@@ -13,13 +13,17 @@
 
 .ListForm{
     width: 100%;
-    margin-top: 1%;
+    margin-top: 3%;
+    margin-bottom: -2%;
 }
 
 .List{
     float: left;
     margin-right: 1%;
     list-style-type: none;
-    font-size: large;
+    font-size: 1.1em;
     font-weight: bold;
+    cursor: pointer;
+    padding: 3% 4% 3% 4%;
+    border-radius: 12px;
 }
