--- a/front/src/styles/SignUp.module.css
+++ b/front/src/styles/SignUp.module.css
@@ -24,6 +24,7 @@ input[type="number"]::-webkit-inner-spin-button {
     text-align: center;
     margin-bottom: 8%;
     font-size: 2em;
+    font-weight: bolder;
 }
 
 .KwIdWrap{
@@ -77,7 +78,7 @@ input[type="number"]::-webkit-inner-spin-button {
 .Default{
     width: 30%;
     margin-right: 4%;
-    padding: 1.2%;
+    padding: 1.1%;
     border-bottom: 3px solid #D5C67A;
     border-top: 3px solid #D5C67A;;
     border-right: 3px solid #D5C67A;
