--- a/front/src/styles/ForumDetail.module.css
+++ b/front/src/styles/ForumDetail.module.css
@@ -52,7 +52,7 @@
     margin-left:15vw;
     margin-top: 0px;
     margin-bottom: 10px;
-    width:70vw;
+    width:71vw;
     border: solid #e8eef7 1px;  
     background-color: #e8eef7;
 }
@@ -95,7 +95,7 @@
     margin-top: -16px;
     margin-bottom: 0px;
     margin-left:15vw;
-    width:70vw;
+    width:71vw;
     background-color: #e8eef7;
 }
 
@@ -113,10 +113,16 @@
     font-size: 18px;
 }
 
+.CommentDate{
+    margin-top: 10px;
+    margin-left: 8px;
+    font-size:10px;
+}
+
 .Delete2{
     padding-top: 3px;
     font-size: 12px;
-    margin-left: 53vw;
+    margin-left: 50vw;
 }
 
 .Delete2:hover{
