--- a/front/src/styles/Mypage.module.css
+++ b/front/src/styles/Mypage.module.css
@@ -1,30 +1,158 @@
-.Intro{
+.Container{
     display: flex;
     flex-direction: row;
+    overflow-x: auto;
+}
+
+.LeftContainer{
+    min-width: 300px;
+    height: 800px;
+    border-right: 1px ridge #052F5F;
+    background-color: #052F5F;
+}
+
+.RightContainer{
+    width:2000px;
+}
+
+.Intro{
     align-items: center;
     margin: 0 auto;
     height: 200px;
-    border-bottom: 1px ridge black; 
+    border-bottom: 1px ridge #052F5F;
+    color: #052F5F;
+    background-color: white;
 }
 
 .MyIcon{
-    font-size: 3.9em;
-    margin-left: 12vw
+    font-size: 6em;
+    margin-top: 30px;
+    margin-left: 100px;
+}
+
+.MyIcon:hover{
+    cursor: pointer;
 }
 
 .Nickname{
     font-size: 1.5em;
-    margin-left: 3vw;
-}
-
-.ShowContent{
-    margin-left: 10vw;
-    padding-top: 10px;
     margin-top: 10px;
-    width: 80vw;
-    border: solid black 1px;
+    margin-left: 123px;
 }
 
 .Writed{
-    margin-left: 5vw;
+    font-size: 20px;
+    padding-top: 10px;
+    margin-left: 50px;
+    color:#F1A208;
+}
+
+.Writed:hover{
+    cursor: pointer;
+}
+
+.EmailContainer{
+    display: flex;
+    flex-direction: row;
+}
+
+.EmailLeft{
+    text-align: center;
+    width: 200px;
+    height: 100px;
+    padding-top: 42px;
+    background-color: #e8eef7;
+}
+
+.EmailRight{
+    padding-left: 30px;
+    padding-top: 35px;
+}
+
+.KwIdWrap{
+    display: flex;
+    flex-direction: row;
+}
+
+.KwId{
+    text-align: center;
+    width: 200px;
+    height: 100px;
+    padding-top: 42px;
+    background-color: #e8eef7;
+}
+
+.Input{
+    width: 45vw;
+    height: 40px;
+    margin-top: 35px;
+}
+
+.Btn{
+    width: 130px;
+    height: 40px;
+    margin-top: 35px;
+}
+
+.Line{
+    margin-top: -1px;
+    margin-bottom: 0px;
+}
+
+.Line2{
+    margin-top: -8px;
+    margin-bottom: 0px;
+}
+
+.ListTitle{
+    text-align: center;
+    font-size: 30px;
+}
+
+.ListContent{
+    display: flex;
+    flex-direction: column;
+}
+
+.BottomTitle{
+    margin-top: -10px;
+    font-weight: bold;
+    font-size: 25px;
+    padding-left: 30px;
+    padding-top: 10px;
+    background-color: #9bbda4;
+    height: 55px;
+    z-index: 1;
+}
+
+.CommentLine{
+    margin-top: -16px;
+    margin-bottom: 0px;
+    background-color: #e8f7ef;
+}
+
+.CommentCLine{
+    margin-left: 30px;
+}
+
+.CommentHeader{
+    margin-left: 50px;
+    display: flex;
+}
+
+.NicknameSecond{
+    font-size: 18px;
+}
+
+.CommentDate{
+    margin-top: 10px;
+    margin-left: 8px;
+    font-size:10px;
+}
+
+
+.CommentContent{
+    margin-left: 60px;
+    margin-top: 20px;
+    padding-bottom: 20px;
 }
