게시판 상세페이지 수정 및 마이페이지 리뷰 추가

--- a/front/src/styles/ForumDetail.module.css
+++ b/front/src/styles/ForumDetail.module.css
@@ -58,6 +58,7 @@
 }
 
 .RegisterContentTableBody{
+    display: flex;
     border-top: solid #e8eef7 1px;
     background-color: #e8eef7;
 }
@@ -84,6 +85,7 @@
 
 .RegisterButton{
     border: none;
+    margin-top: 1vw;
     margin-left: 10px;
     width: 90px;
     height: 100px;
