--- a/front/src/styles/Mypage.module.css
+++ b/front/src/styles/Mypage.module.css
@@ -5,8 +5,9 @@
 }
 
 .LeftContainer{
+    flex-direction: column;
+    min-height: 100vh;
     min-width: 300px;
-    height: 800px;
     border-right: 1px ridge #052F5F;
     background-color: #052F5F;
 }
@@ -40,6 +41,16 @@
     margin-left: 123px;
 }
 
+.HeaderTitle{
+    font-weight: bold;
+    font-size: 25px;
+    padding-left: 30px;
+    padding-top: 10px;
+    background-color: #9bbda4;
+    height: 55px;
+    z-index: 1;
+}
+
 .Writed{
     font-size: 20px;
     padding-top: 10px;
@@ -61,7 +72,7 @@
     width: 200px;
     height: 100px;
     padding-top: 42px;
-    background-color: #e8eef7;
+    background-color: #e8f7ef;
 }
 
 .EmailRight{
@@ -79,7 +90,7 @@
     width: 200px;
     height: 100px;
     padding-top: 42px;
-    background-color: #e8eef7;
+    background-color: #e8f7ef;
 }
 
 .Input{
@@ -155,4 +166,9 @@
     margin-left: 60px;
     margin-top: 20px;
     padding-bottom: 20px;
+}
+
+.imageHandler{
+    width: 80px;
+    height: 100px;
 }
