--- a/front/src/styles/Mypage.module.css
+++ b/front/src/styles/Mypage.module.css
@@ -1,32 +1,34 @@
 .Container{
-    display: flex;
-    flex-direction: row;
+
     overflow-x: auto;
+    height: 100%;
 }
 
 .LeftContainer{
     min-width: 300px;
-    height: 800px;
+    height: 100%;
     border-right: 1px ridge #052F5F;
     background-color: #052F5F;
+    float: left;
 }
 
 .RightContainer{
-    width:2000px;
+    width:100%;
 }
 
 .Intro{
     align-items: center;
     margin: 0 auto;
-    height: 200px;
+    height: 100%;
     border-bottom: 1px ridge #052F5F;
     color: #052F5F;
     background-color: white;
+
 }
 
 .MyIcon{
     font-size: 6em;
-    margin-top: 30px;
+    margin-top: 7%;
     margin-left: 100px;
 }
 
@@ -38,17 +40,26 @@
     font-size: 1.5em;
     margin-top: 10px;
     margin-left: 123px;
+    margin-bottom: 9%;
 }
 
 .Writed{
-    font-size: 20px;
-    padding-top: 10px;
+    font-size: larger;
+    padding-top: 4%;
     margin-left: 50px;
     color:#F1A208;
+
+}
+
+.WritedWrap{
+    height: 400px;
+    margin: 4% 0 10% 0;
+    padding-top: 20%;
 }
 
 .Writed:hover{
     cursor: pointer;
+    color:#D5C67A;
 }
 
 .EmailContainer{
@@ -58,7 +69,7 @@
 
 .EmailLeft{
     text-align: center;
-    width: 200px;
+    width: 30%;
     height: 100px;
     padding-top: 42px;
     background-color: #e8eef7;
@@ -76,7 +87,7 @@
 
 .KwId{
     text-align: center;
-    width: 200px;
+    width: 30%;
     height: 100px;
     padding-top: 42px;
     background-color: #e8eef7;
@@ -155,4 +166,11 @@
     margin-left: 60px;
     margin-top: 20px;
     padding-bottom: 20px;
+}
+
+.imageHandler{
+    min-height: 260px;
+    max-height: 260px;
+    min-width: 260px;
+    max-width: 260px;
 }
