--- a/front/src/styles/ForumDetail.module.css
+++ b/front/src/styles/ForumDetail.module.css
@@ -58,6 +58,8 @@
 }
 
 .RegisterContentTableBody{
+    display: flex;
+    flex-direction: row;
     border-top: solid #e8eef7 1px;
     background-color: #e8eef7;
 }
@@ -85,6 +87,7 @@
 .RegisterButton{
     border: none;
     margin-left: 10px;
+    margin-top: 10px;
     width: 90px;    
     height: 100px;
     color: white;
