--- a/front/src/styles/ForumDetail.module.css
+++ b/front/src/styles/ForumDetail.module.css
@@ -87,7 +87,7 @@
 .RegisterButton{
     border: none;
     margin-left: 10px;
-    margin-top: 10px;
+    margin-top: 1vw;
     width: 90px;    
     height: 100px;
     color: white;
