--- a/front/src/styles/ForumDetail.module.css
+++ b/front/src/styles/ForumDetail.module.css
@@ -53,7 +53,7 @@
     margin-top: 0px;
     margin-bottom: 10px;
     width:71vw;
-    border: solid #e8eef7 1px;  
+    border: solid #e8eef7 1px;
     background-color: #e8eef7;
 }
 
@@ -69,14 +69,15 @@
     margin-top: 1vw;
     margin-left: 4vw;
     margin-bottom: 1vw;
-    width: 55vw;
+    width: 75%;
     height: 100px;
+    border-radius: 15px;
 }
 
 .CommentTitle{
     margin-left:15vw;
     width: 100px;
-    height: 25px;     
+    height: 25px;
     text-align: center;
     font-size: 17px;
     border-top-left-radius: 3px;
@@ -87,11 +88,13 @@
 .RegisterButton{
     border: none;
     margin-left: 10px;
-    margin-top: 1vw;
-    width: 90px;    
+    margin-right: 2%;
+    margin-top: 1.5%;
+    width: 13%;
     height: 100px;
     color: white;
     background-color: #224874;
+    border-radius: 15px;
 }
 
 .CommentLine{
@@ -136,4 +139,19 @@
     margin-left: 6vw;
     margin-top: 20px;
     padding-bottom: 20px;
+}
+
+.Modal{
+    z-index: 10000;
+ }
+
+ .ModalContent{
+    text-align: center;
+    font-size: large;
+    color:red;
+}
+
+.Btn, .Btn:hover{
+    background-color: #06A77D;
+    border: #06A77D;
 }
